# life-os

./: .gitignore  README.md  package.json  pnpm-lock.yaml
apps/api/: .env.example  Dockerfile  pyproject.toml  requirements.txt
apps/api/app/: ai.py  auth.py  config.py  db.py  goals.py  main.py  notion.py  routes.py
apps/web/: package.json  tailwind.config.ts
apps/web/src/: proxy.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/cycle/: page.tsx
apps/web/src/components/: NumberStepper.tsx  RangeToggle.tsx
apps/web/src/components/ui/: Badge.tsx  Button.tsx  Cursor.tsx  Input.tsx  Panel.tsx  SectionTitle.tsx  SegmentedControl.tsx  Stat.tsx  Textarea.tsx  index.ts
apps/web/src/config/: cycle.ts  goals.ts
apps/web/src/design/: README.md  tokens.ts
apps/web/src/features/auth/: LoginForm.tsx  auth.ts
apps/web/src/features/bets/: BetBoard.tsx
apps/web/src/features/cycle/: CycleReviewPage.tsx  VisionCard.tsx  WeekReviewForm.tsx
apps/web/src/features/dashboard/: DashboardPage.tsx  DayCard.tsx  DayNav.tsx  DayNote.tsx  DayPicker.tsx  RefreshTimer.tsx
apps/web/src/features/deadline/: DeadlineCard.tsx  Typewriter.tsx
apps/web/src/features/fitness/: FitnessGoalCard.tsx
apps/web/src/features/habits/: ActivityItem.tsx  ActivityNote.tsx  HabitButton.tsx  HabitSpiral.tsx  HabitTracker.tsx  TreguaControl.tsx
apps/web/src/features/topics/: Heatmap.tsx  TopicCards.tsx  TopicDetailPage.tsx  charts.tsx  stats.ts
apps/web/src/lib/: api.ts  cn.ts  range.ts  time.ts
supabase/migrations/: 0001_init_life_dashboard.sql  0002_week_review.sql
(+9 files in other folders)
