[project]
name = "life-os-api"
version = "0.1.0"
description = "Life OS backend API (FastAPI)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "asyncpg>=0.30",
    "httpx>=0.27",
    "pydantic-settings>=2.14.2",
    "openai>=1.40",
]

[tool.uv]
# This is a deployed application, not a distributable package — don't try to
# build the `app/` directory into a wheel; just resolve and install the deps.
package = false
